fix: alignment issues

--- a/src/pages/home/section/heroSection/heroSection.css
+++ b/src/pages/home/section/heroSection/heroSection.css
@@ -54,7 +54,7 @@
   position: absolute;
   top: 11rem;
   /* right: 6rem; */
-  left: 65.25%;
+  left: 65.65%;
   border-radius: 8px;
   z-index: -1;
 }
